# qzdl

./: .gitattributes  AUTHORS  CHANGELOG  CMakeLists.txt  COMPILE  README
.github/workflows/: cmake.yml  ubuntu-ci.yml  windows-ci.yml
SimpleWFA/: SimpleWFA.h
include/: ZDLConfiguration.h  ZDLFileListable.h  ZDLFilePane.h  ZDLIWadList.h  ZDLInterface.h  ZDLMultiPane.h  ZDLQSplitter.h  ZDLWidget.h  ZLibDir.h  libwad.h  zdlcommon.h  zdlconf.hpp  zdlline.hpp
src/: CMakeLists.txt  SimpleWFA.cpp  SimpleWFA.h  ZDLAboutDialog.cpp  ZDLAboutDialog.h  ZDLConfiguration.cpp  ZDLConfiguration.h  ZDLConfigurationManager.cpp  ZDLConfigurationManager.h  ZDLFileAssociations.cpp  ZDLFileAssociations.h  ZDLFileInfo.cpp  ZDLFileInfo.h  ZDLFileList.cpp  ZDLFileList.h  ZDLFileListable.cpp  ZDLFileListable.h  ZDLFilePane.cpp  ZDLFilePane.h  ZDLIWadList.cpp  ZDLIWadList.h  ZDLImportDialog.cpp  ZDLImportDialog.h  ZDLInterface.cpp  ZDLInterface.h  ZDLListEntry.cpp  ZDLListEntry.hpp  ZDLListWidget.cpp  ZDLListWidget.h  ZDLListable.cpp  ZDLListable.h  ZDLMainWindow.cpp  ZDLMainWindow.h  ZDLMapFile.cpp  ZDLMapFile.h  ZDLMultiPane.cpp  ZDLMultiPane.h  ZDLNameInput.cpp  ZDLNameInput.h  ZDLNameListable.cpp  (+26 more)
src/app/: CMakeLists.txt  qzdl.cpp
src/app/resources/WIN32/: qzdl.rc
src/base/: CMakeLists.txt  ZDLFileInfo.cpp  ZLibDir.cpp  ZLibPK3.cpp  config.h  libwad.cpp  zdlcommon.h  zdlsection.hpp
src/gui/: CMakeLists.txt  ZDLConfigurationManager.cpp  ZDLConfigurationManager.h  ZDLFileList.h  ZDLIWadList.cpp  ZDLImportDialog.cpp  ZDLInterface.cpp  ZDLListEntry.cpp  ZDLMainWindow.cpp  ZDLMultiPane.cpp  ZDLNameInput.h  ZDLNameListable.cpp  ZDLNameListable.h  ZDLQSplitter.cpp  ZDLSettingsPane.cpp  ZDLSettingsTab.cpp  ZDLSourcePortList.cpp  ZDLSourcePortList.h
src/gui/win32/: ZDLFileAssociations.cpp
src/resources/OSX/: zdl3.icns
src/resources/Win32/: qzdl.rc
src/win32/: CMakeLists.txt  SimpleWFA.cpp  ZDLFileAssociations.cpp  ZDLFileAssociations.h
